platform/kustomize/seed/supporting-applications/kargo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kargo-api
  namespace: kargo
  annotations:
    # Traefik-specific annotations
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # cert-manager annotations
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kargo.lab.local.ctoaas.co
    - kargo.lab.ctoaas.co
    secretName: kargo-ctoaas-tls
  rules:
  - host: kargo.lab.local.ctoaas.co
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kargo-api
            port:
              number: 80
      - pathType: Prefix
        path: /webhooks
        backend:
          service:
            name: kargo-external-webhooks-server
            port:
              number: 80
  - host: kargo.lab.ctoaas.co
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kargo-api
            port:
              number: 80
      - pathType: Prefix
        path: /webhooks
        backend:
          service:
            name: kargo-external-webhooks-server
            port:
              number: 80
